Steamworks4j, Code